--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-coffee": "^0.12.0",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-execute": "^0.2.2"
+    "grunt-execute": "^0.2.2",
+    "mocha": "^2.0.1",
+    "should": "^4.4.1"
   },
   "bugs": {
     "url": "https://github.com/venkatperi/node-restit/issues"
